# nonlocal-image-edit

./: CMakeLists.txt  Makefile  README.md  main.cpp
data/: links.md
include/: filter.hpp  utils.hpp
latex/: report.tex
src/: denoise.cpp  enhance.cpp  filter.cpp  main.cpp
test/: test_filter.cpp
